--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="style.css">
 <body>
     <div id="timeContainer">
         <div id="timeDisplay">00:00:00</div>
@@ -13,6 +13,6 @@
         <button id="pauseBtn" class="timerBtn">Pause</button>
         <button id="resetBtn" class="timerBtn">Reset</button>
     </div>
-    <script src="/Stopwatch.js"></script>
+    <script src="Stopwatch.js"></script>
 </body>
 </html>
