--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <button id="pauseBtn" class="timerBtn">Pause</button>
         <button id="resetBtn" class="timerBtn">Reset</button>
     </div>
-    <script src="Stopwatch.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
